<resources>
    <string name="app_name">SpaceX</string>
    <string name="patch_small">Patch Small</string>
    <string name="all_launches_header_text">All launches: </string>
    <string name="details_header">Details:</string>
    <string name="flight_number_label">fl.n.</string>
    <string name="tab_text_1">Details</string>
    <string name="tab_text_2">Photos</string>

    <string name="launches">Launches</string>
    <string name="company_info">Company info</string>
    <string name="about">About</string>

    <string name="all_launches_fragment_title">All Launches</string>
    <string name="past_launches_fragment_title">Past Launches</string>
    <string name="upcoming_launches_fragment_title">Upcoming Launches</string>
    <string name="latest_launch_fragment_title">Latest Launch</string>
    <string name="next_launch_fragment_title">Next Launch</string>


    <string name="navigation_view_header_title">SpaceX</string>

    <string name="mask_photo">https://upload.wikimedia.org/wikipedia/commons/e/ed/Elon_Musk_Royal_Society.jpg</string>
    <string name="founder">Founder:</string>
    <string name="founded">Founded:</string>
    <string name="history">History:</string>
    <string name="todo">TODO</string>
    <string name="no_photos">No photos. Try to find them in another launch.</string>

    <string name="hello">Hi!</string>
    <string name="hello_body">Glad to see you here! It\'s a simple project where i train my dev skills.
        Please, give me a feedback(mistakes, recommends) on sukhanov87@gmail.com.</string>
    <string name="menu_filter">Filter</string>
</resources>
