<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="launch"
            type="team.lf.spacex.data.ui_models.Launch" />

        <variable
            name="viewModel"
            type="team.lf.spacex.ui.launches.LaunchesViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_space"
        android:layout_marginTop="@dimen/normal_space"
        android:layout_marginEnd="@dimen/normal_space"
        android:onClick="@{()->viewModel.openLaunch(launch)}"
        app:cardCornerRadius="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            >

            <ImageView
                android:id="@+id/patch_small"
                imageUrl="@{launch.links.mission_patch_small}"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginStart="@dimen/normal_space"
                android:layout_marginTop="@dimen/normal_space"
                android:layout_marginBottom="@dimen/normal_space"
                android:contentDescription="@string/patch_small"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/flight_number"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/mission_name"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_space"
                android:layout_marginEnd="@dimen/normal_space"
                app:layout_constraintBottom_toTopOf="@+id/launch_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shortMissionName="@{launch.mission_name}"
                tools:text="Mission Name" />

            <TextView
                android:id="@+id/flight_number"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_space"
                android:layout_marginTop="@dimen/normal_space"
                android:text="@{launch.flight_number}"
                app:layout_constraintStart_toEndOf="@+id/fn"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="111" />

            <TextView
                android:id="@+id/launch_date"
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/details_header"
                app:layout_constraintEnd_toEndOf="@+id/mission_name"
                app:layout_constraintTop_toBottomOf="@+id/mission_name"
                app:unixToDate="@{launch.launch_date_unix}"
                tools:text="@tools:sample/date/ddmmyy" />

            <TextView
                android:id="@+id/details"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/normal_space"
                android:layout_marginBottom="@dimen/normal_space"
                android:textAlignment="viewEnd"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/details_header"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/patch_small"
                app:layout_constraintTop_toBottomOf="@+id/details_header"
                app:shortDetails="@{launch.details}"
                tools:text="@tools:sample/lorem/random" />

            <TextView
                android:id="@+id/details_header"
                style="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/details_header"
                app:layout_constraintBottom_toTopOf="@+id/details"
                app:layout_constraintEnd_toEndOf="@+id/launch_date"
                app:layout_constraintTop_toBottomOf="@+id/launch_date" />

            <TextView
                android:id="@+id/fn"
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flight_number_label"
                app:layout_constraintBaseline_toBaselineOf="@+id/flight_number"
                app:layout_constraintStart_toStartOf="@+id/patch_small" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</layout>