<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="team.lf.spacex.ui.company_info.CompanyInfoViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="false">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:elevation="4dp">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:expandedTitleGravity="top|left"
                app:expandedTitleTextAppearance="@style/CollapsedExpandedTitleText"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/relativeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        app:imageUrl="@{viewmodel.companyInfo.mask_photo}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/guideline"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:srcCompat="@tools:sample/avatars"
                        android:contentDescription="@string/todo" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_begin="190dp" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="62dp"
                        android:layout_height="21dp"
                        android:layout_marginStart="@dimen/normal_space"
                        android:layout_marginTop="@dimen/normal_space"
                        android:text="@string/founder"
                        app:layout_constraintStart_toEndOf="@+id/imageView"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/normal_space"
                        android:layout_marginEnd="@dimen/normal_space"
                        android:text="@{viewmodel.companyInfo.founder}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/textView2"
                        app:layout_constraintTop_toTopOf="@+id/textView2"
                        tools:text="Lorem" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:text="@string/founded"
                        app:layout_constraintEnd_toEndOf="@+id/textView2"
                        app:layout_constraintStart_toStartOf="@+id/textView2"
                        app:layout_constraintTop_toBottomOf="@+id/textView2" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/normal_space"
                        android:text="@{viewmodel.companyInfo.founded}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/textView3"
                        app:layout_constraintTop_toTopOf="@+id/textView4"
                        tools:text="Lorem" />


                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">
                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/normal_space"
                    android:layout_marginTop="@dimen/normal_space"
                    android:layout_marginEnd="@dimen/normal_space"
                    android:text="@{viewmodel.companyInfo.summary}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@tools:sample/lorem[30]" />

                <TextView
                    android:id="@+id/history"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/normal_space"
                    android:layout_marginTop="@dimen/normal_space"
                    android:layout_marginEnd="@dimen/normal_space"
                    android:text="@string/history"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/history_list"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="@dimen/normal_space"
                    android:layout_marginTop="@dimen/normal_space"
                    android:layout_marginEnd="@dimen/normal_space"
                    android:layout_marginBottom="@dimen/normal_space"
                    app:items="@{viewmodel.historyEvents}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/history"
                    tools:itemCount="10"
                    tools:listitem="@layout/item_history_event" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/normal_space"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />
            </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>